Fixed burger menu visibility on desktop

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ nav {
     margin-right: 10px;
     flex-direction: column;
     justify-content: space-evenly;
-    /* display: none; */
+    display: none;
     cursor: pointer;
 }
 
